--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   markdown: ^7.3.0
   audioplayers: ^6.4.0
   functional_widget_annotation:
+  collection: ^1.19.1
 
 dev_dependencies:
   flutter_test:
